# LiveTagger

./: Cargo.toml  LICENSE  LiveTagger.csproj  LiveTagger.sln  Program.cs  README.md  about.hbs  about.toml
.github/workflows/: build.yml  release.yml
livemeta/: Cargo.toml
livemeta/src/: error.rs  folder.rs  lib.rs
src/: AbletonMetadata.cs  LiveTagger.csproj  Program.cs  XmlConstants.cs  Xmp.cs  commands.rs  lib.rs  main.rs  metadata.rs
src/XmlConstants/: Ableton.cs  Rdf.cs
src/metadata/: folder.rs  sample.rs
src/metadata/test_data/: initial.xml  tags_added.xml  tags_removed_all.xml
src/test_data/: initial.xml  tags_added.xml  tags_removed.xml  tags_removed_all.xml
test/: AbletonMetadataTests.cs  LiveTaggerTests.csproj  TestUtils.cs  XmpTests.cs
test/TestData/: WithAllTagsRemoved.xml  WithTagsAdded.xml  WithTagsRemoved.xml
